# ALPHA_MINER

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  inspect_account.py  inspect_data.py  install-docker.sh  main.py  pyproject.toml  requirements.txt  test_live_order.py
.devcontainer/: devcontainer.json
alpha_miner/: __init__.py  base.py  feeder.py  pipeline.py
backtester/: __init__.py  aligner.py  allocator.py  engine.py  executor.py  metrics.py
data_cache/: AAPL_1_day.parquet  ABBV_1_day.parquet  ABNB_1_day.parquet  ABT_1_day.parquet  ACN_1_day.parquet  ADBE_1_day.parquet  ADI_1_day.parquet  AEP_1_day.parquet  AFL_1_day.parquet  AIG_1_day.parquet  AJG_1_day.parquet  AKAM_1_day.parquet  ALGN_1_day.parquet  ALL_1_day.parquet  AMAT_1_day.parquet  AMCR_1_day.parquet  AMD_1_day.parquet  AMGN_1_day.parquet  AMP_1_day.parquet  AMT_1_day.parquet  AMZN_1_day.parquet  ANET_1_day.parquet  AON_1_day.parquet  APD_1_day.parquet  ARE_1_day.parquet  AVB_1_day.parquet  AVGO_1_day.parquet  AWK_1_day.parquet  AXP_1_day.parquet  AZO_1_day.parquet  A_1_day.parquet  BAC_1_day.parquet  BALL_1_day.parquet  BAX_1_day.parquet  BA_1_day.parquet  BDX_1_day.parquet  BIIB_1_day.parquet  BKNG_1_day.parquet  BKR_1_day.parquet  BK_1_day.parquet  (+255 more)
data_layer/: __init__.py  api.py  cache_manager.py  fetcher.py  ib_client.py  universe.py
evaluation/: __init__.py  bucket_stats.py  data_prep.py  ic_stats.py  plotting.py  tearsheet.py
execution/: __init__.py  main_job.py  risk_manager.py  router.py  state_manager.py  target_translator.py  tracker.py
(+14 files in other folders)
