[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "ib-async>=2.1.0",
    "ib-insync>=0.9.86",
    "ibapi-latest==10.43.2",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
